数据爬取和预处理

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # 项目排除路径
-/跑步数据
+/10K女跑者数据
+/10K男跑者数据
 /马拉松排行榜运动员
-/10K排行榜跑者数据
+/10K排行榜跑者数据men
 /10000m排行榜运动员
 /排行榜中的运动员主页
-/summary.csv
+/men_summary.csv
